# EdgeDetectionViewer

app/: EdgeDetector.kt  build.gradle.kts
app/src/androidTest/java/com/ashasuresh/edgedetectionviewer/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/ashasuresh/edgedetectionviewer/: EdgeDetector.kt  MainActivity.kt  NativeBridge.kt
app/src/main/java/com/ashasuresh/edgedetectionviewer/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/test/java/com/ashasuresh/edgedetectionviewer/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
